fixed: device-dropdown

--- a/templates/device.html
+++ b/templates/device.html
@@ -915,7 +915,14 @@ body {
 <audio id="remoteAudio" autoplay></audio>
 <script src="https://cdn.WebRTC-Experiment.com/RecordRTC.js"></script>
 <script>
-    const socket = io();
+    const socket = io('https://test.flask-server.tech', {
+    path: '/socket.io',  // Ensure this path is correct; it's the default for Flask-SocketIO // If you need to pass query parameters
+});
+    socket.on('connect', function() {
+        console.log('Connected to server');
+        endCall(); // End call on reconnect, which may occur after a page refresh
+    });
+
     const remoteAudio = document.getElementById('remoteAudio');
     const chatContainer = document.getElementById('chat-container');
     const messageInput = document.getElementById('message-input');
@@ -3250,10 +3257,7 @@ function endCall() {
     if (callSetupModal) callSetupModal.style.display = 'none';
 }
 
-socket.on('connect', function() {
-    console.log('Connected to server');
-    endCall(); // End call on reconnect, which may occur after a page refresh
-});
+
 
 // Bind endCall to the window's beforeunload event
 window.addEventListener('beforeunload', function() {
