--- a/templates/server_interface.html
+++ b/templates/server_interface.html
@@ -643,9 +643,10 @@ fill: #2B641E;
 
   
 <script>
-const socket = io('https://test.flask-server.tech', {
-    path: '/socket.io',  // Ensure this path is correct; it's the default for Flask-SocketIO // If you need to pass query parameters
+const socket = io(location.origin, {
+    path: '/socket.io',  // Ensure this path is correct; it's the default for Flask-SocketIO
 });
+
 
 let warningElement = document.getElementById('deviceWarning');
 let typingTimeout;
