--- a/templates/server_interface.html
+++ b/templates/server_interface.html
@@ -364,7 +364,7 @@ fill: #2B641E;
 </head>
 
 <body>
-    <div class="mx-auto mt-5 max-w-full">
+    <div class="mx-auto max-w-full">
         <!-- Color Picker Modal -->
     <div id="colorPickerModal" class="fixed inset-0 bg-black bg-opacity-30 backdrop-filter backdrop-blur-sm flex justify-center items-center hidden z-50" aria-labelledby="colorPickerModalLabel" aria-modal="true" role="dialog">
         <div class="modal-dialog modal-dialog-centered w-1/3">
@@ -538,7 +538,7 @@ fill: #2B641E;
      
 
         <!-- Device Select Chat -->
-        <div class="row justify-content-center">
+        <div class="flex justify-center items-center">
             <div class="col-lg-10">
                 <div class="flex justify-center align-center">
                     <select id="deviceSelectChat" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
